testdata/adhoc.reject.lc

data A = A

x = one :: Vec 4 A

main = x    -- TODO: catch error at application


